--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Work Sans", sans-serif;
 }
 
 html,
@@ -12,5 +15,108 @@ body {
 main {
   height: 100%;
   width: 100%;
-  background-color: red;
+}
+nav {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px;
+}
+
+.nav-part1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+.logo {
+  height: 20px;
+  width: 20px;
+  background-color: black;
+  border-radius: 50%;
+}
+
+.nav-part2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+.nav-part2 h4 {
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: capitalize;
+}
+.nav-part2 h4 span {
+  color: rgb(170, 170, 175);
+  margin-left: 20px;
+}
+
+#nav-2 {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  padding: 0 50px;
+}
+
+#nav-2 h3 {
+  font-size: 18px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+#content {
+  height: calc(100% - 120px);
+  width: 100%;
+  /* background-color: aqua; */
+}
+.text-content {
+  height: 45%;
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
+}
+.text-content::-webkit-scrollbar {
+  background-color: transparent;
+  height: 6px;
+}
+.text-content::-webkit-scrollbar-thumb {
+  background-color: orange;
+}
+.text {
+  flex-shrink: 0;
+  height: 100%;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.text h2 {
+  font-size: 130px;
+  font-weight: 300;
+}
+.image-content {
+  height: 55%;
+  width: 100%;
+  display: flex;
+  overflow-x: auto;
+}
+
+.image-content::-webkit-scrollbar {
+  display: none;
+}
+.img {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
